--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,25 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+/* tag sizes */
+.tag-size-1 {
+  font-size: 10px;
+}
+
+.tag-size-2 {
+  font-size: 13px;
+}
+
+.tag-size-3 {
+  font-size: 16px;
+}
+
+.tag-size-4 {
+  font-size: 19px;
+}
+
+.tag-size-5 {
+  font-size: 21px;
+}
+
